--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "motion": "^12.6.3",
     "negotiator": "^1.0.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
